- fixed ISSchemaProvider to use the information schema to retrieve parameter metadata when running 
  against server 5.5.3 or greater (MySQL bug #48007, Oracle bug #12539685).
- Fixed MySqlProviderManifest.GetStoreSchemaDescription() to return the correct schema definition depending
  on the server version.

Version 6.3.6
- Fixed TracingDriver so that it normalizes long queries before truncation so we don't get exceptions     
  when quoted tokens land on the 300th character (bug #57641)
- added code that will attempt to enumerate procs via mysql.proc the first time. If we get an 1142     
  error then we mark that we don't have access to that table and use IS from then on. (bug #36694)
- fixed loading of mono.posix assembly to use the right assembly (bug #56410)
- fixed the installer to require .net 2.0 or .net 4.0 "full" profile since system.web is only supplied with
  the full profile (bug #57654)
- starting delivering 4.0 variants of MySql.Data and MySql.Web.  This apparently helps Mono 2.8 (bug #56509)
- adding mapping for UTF8MB4 charset introduced with 5.5.3 (bug #58244)
- return default values for text columns as quoted (bug #58167)
- fixed our DDEX code so that dragging tables from server explorer onto a typed data set
  preserves the table name (bug #57894)
- fixed ReadFieldLength to return a long so bigint autoincrement columns can work (bug #58373)
- fixed MySqlHelper.ExecuteReader bug where it was opening the connection inside a using block
  which was closing the connection before we were really done with it (bug #57501)
- fixed bug where older versions of MySQL would present cast(0 as decimal(0,0)) as string 
  that caused our EF code to throw an exception as it tried to convert that to bool
  (bug #55349)
- change reader to close the connection if CommandBehavior.CloseConnection is given and an
  exception is generated (bug #58652)
- removed extra call to Update in MySqlDataAdapter introduced with bug fix to bug #54863.