@@ -55,7 +55,7 @@
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <IntermediateOutputPath>obj\Release-4.0\</IntermediateOutputPath>
     <OutputPath>bin\Release-4.0\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;CLR4</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -69,7 +69,7 @@
     <DebugSymbols>true</DebugSymbols>
     <IntermediateOutputPath>obj\Debug-4.0\</IntermediateOutputPath>
     <OutputPath>bin\Debug-4.0\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;CLR4</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
