@@ -103,6 +103,8 @@ INSERT INTO Orders VALUES (6, 3, 98.5);
 INSERT INTO Orders VALUES (7, 1, 222.3);
 INSERT INTO Orders VALUES (8, 2, 125);
 INSERT INTO Orders VALUES (9, 3, 126.4);	
+INSERT INTO Orders VALUES (10, 3, 350.54721);	
+
 
 CREATE TABLE Authors(
 	id INT AUTO_INCREMENT NOT NULL PRIMARY KEY,
